@startuml
package employee {
    class WorkDayInfoController {

    }
    class ChangePasswordController {

    }
    class SessionLoginController {

    }
    class LoginHistoryController {

    }
    class DayController {

    }
    class CalendarController {

    }
    class EmployeeInformationController {

    }
}
CalendarController o-- DayController 
DayController o-- WorkDayInfoController
EmployeeInformationController o-- ChangePasswordController
EmployeeInformationController o-- LoginHistoryController
EmployeeInformationController o-- CalendarController
EmployeeInformationController o-- controllers.TimeCounterController
@enduml